--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,14 @@ dependencies = [
     "djangorestframework>=3.14.0",
     "drf-spectacular>=0.26.4",
     "django-extensions>=3.2.3",
+    "Babel>=2.12.1",
+    "dash>=2.13.0",
+    "dash-bootstrap-components>=1.4.2",
+    "pandas>=2.0.3",
+    "pandas-stubs>=2.0.2.230605",
+    "plotly>=5.16.1",
+    "python-i18n>=0.3.9",
+    "django-plotly-dash>=2.2.0",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
