--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "drf-spectacular>=0.26.4",
     "django-extensions>=3.2.3",
     "Babel>=2.12.1",
-    "dash>=2.13.0",
+    # see https://stackoverflow.com/questions/76350371/i-upgraded-to-django-4-2-1-and-django-plotly-dash-is-not-working-anymore-wrapp
+    # Regarding the Dash issue
+    "dash>=2.0,<2.10",
+#    "dash>=2.13.0",
     "dash-bootstrap-components>=1.4.2",
     "pandas>=2.0.3",
     "pandas-stubs>=2.0.2.230605",
